# Projet_8

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  alembic.ini  pyproject.toml  pytest_result.txt  ruff_after_fix.txt  ruff_diff.txt  ruff_report.txt
.github/workflows/: cd.yml  ci.yml
alembic/: env.py
alembic/versions/: 0e0c066690f4_create_predictions_table.py  206600e28d40_create_predictions_table.py  61d59b1d25ec_add_latency_ms_and_inference_ms_to_.py
api/: __init__.py  config.py  database.py  db_service.py  exceptions.py  feature_naming.py  main.py  middleware.py  models.py  predictor.py  profiling.py  schemas.py
docker/: Dockerfile  docker-compose.yml
huggingface/: Dockerfile  README.md
models/: model_metadata.json  preprocessor.pkl  xgboost_champion.pkl  xgboost_classifier.onnx
monitoring/: __init__.py  streamlit_app.py
monitoring/core/: __init__.py  db.py  drift.py  metrics.py  shap_mapping.py
monitoring/pages/: 1_Metriques_API.py  2_Drift_Evidently.py  3_Donnees_production.py
scripts/: aggregate_api_benchmarks.py  analyze_profile.py  benchmark_api.py  benchmark_inference.py  build_reference_dataset.py  compare_benchmarks.py  convert_to_onnx.py  extract_model.py  generate_input_schema.py  generate_prediction_model.py  generate_sample_payload.py  generate_sample_request.py  profile_api.py  sanity_check_db_service.py  simulate_production.py  update_metadata.py  validate_onnx.py
scripts/diagnostics/: README.me  diagnose_features.py  find_champion_model.py  sanity_check_test.py
tests/: conftest.py  test_drift.py  test_shap_mapping.py
tests/data/: sample_payload.json
tests/fixtures/: sample_request.json
tests/integration/: test_health.py  test_predict.py  test_predict_onnx.py  test_root.py
tests/unit/: test_db_service.py  test_feature_naming.py  test_predictor.py
