[project]
name = "projet8-credit-scoring-mlops"
version = "0.1.0"
description = "Déploiement et monitoring d'un modèle de scoring crédit (Projet 8 - OpenClassrooms AI Engineer)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # === API ===
    "fastapi[standard]>=0.121.1",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    # === Modèle (chargement + inférence) ===
    "xgboost>=3.1.2",
    "scikit-learn>=1.7.2",
    "pandas>=2.3.3",
    "numpy>=2.0.0",
    "joblib>=1.5.2",
    # === Base de données ===
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # === Monitoring ===
    "streamlit>=1.40.0",
    "evidently>=0.5.0",
    "plotly>=5.24.0",
    # === Tests ===
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "httpx>=0.27.0", # Pour TestClient FastAPI
    "psycopg[binary]>=3.2",
]

[tool.coverage.run]
source = ["api", "monitoring"]
omit = [
    "*/tests/*",
    "*/.venv/*",
    "*/venv/*",
    "scripts/*",
    "docs/*",
    "htmlcov/*",
    "*/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=api --cov=monitoring --cov-report=term-missing --cov-report=html"
